--- a/Assignment 19/Assignment 19 style.css
+++ b/Assignment 19/Assignment 19 style.css
@@ -16,10 +16,12 @@ h3{
     color: aliceblue;
     font-family: 'Gstatic';
     font-size: 30px;
+    text-align: center;
 }
 p{
     color: #F6D8D8;
-    font-size: 30px;
+    font-size: 30px;    
+    text-align: center;
 }
 img
 {
@@ -56,7 +58,7 @@ img:hover body{
     box-shadow: 20px 20px 10px rgb(255, 144, 144);
     transform: rotateY(-360deg);
 }
-@media only screen and (max-width: 300px{
+@media only screen and (max-width: 300px){
     img{
         display: block;
         width: 80%;
